fix landscape layout issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -502,6 +502,7 @@
             gap: 0;
             width: 100vw;
             height: 42vh;
+            margin-bottom: 0;
             background-color: black;
             justify-content: center;
             #logo-intro {
@@ -573,6 +574,7 @@
             background-color: rgb(255, 255, 255);
             justify-content: center;
             scroll-snap-align: center;
+            padding-top: 0;
             #logo-end {
                 display: none;
             }
